# system-zero

./: .gitignore  Cargo.toml  LICENSE  README.md  bool.sz  goal.txt  rustfmt.toml
core/: Cargo.toml
core/src/: ast.rs  calc.lalrpop  lexer.rs  lib.rs  main.rs  parser.lalrpop  parser.rs  test.rs
src/: main.rs
szi/: Cargo.toml
szi/src/: bool.sz  list.sz  main.rs  nat.sz  prelude.sz
